<resources>
    <string name="app_name">QR Code Attendance</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="qrabsen">QR ABSENCE</string>
    <string name="login">Login</string>
    <string name="setup">Application Setup</string>
    <string name="url">URL / IP</string>
    <string name="port">Port</string>
    <string name="masuk">Enter</string>
    <string name="keluar">Exit</string>
    <string name="history">History</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="absen_masuk">Clock In</string>
    <string name="absen_pulang">Clock Out</string>
    <string name="nisn">NISN</string>
    <string name="no">No</string>
    <string name="ket">Desc</string>
    <string name="jam_masuk">Check-in Time</string>
    <string name="datang">Arrive</string>
    <string name="jam_pulang">Check-out Time</string>
    <string name="pulang">Leave</string>
    <string name="cari">Search</string>
    <string name="tanggal">Date</string>
    <string name="nama">Name</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="nomor_induk_siswa">Nomor Induk Siswa</string>
    <string name="siswa">Siswa</string>
    <string name="edit">Edit</string>
    <string name="tambah_siswa">Add Student</string>
    <string name="tambah">Tambah</string>
    <string name="edit_siswa">Edit Student</string>
    <string name="daftar">List</string>
    <string name="qr_siswa">QR Siswa</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="halaman">Halaman</string>
    <string name="berikutnya">Berikutnya</string>
    <string name="dari">Dari</string>
</resources>
