<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        >
        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_columnWeight="2"
            />
        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cari"
            android:layout_columnWeight="2"
            android:textColor="@color/white"
            android:background="@drawable/rounded_trans_btn"
            android:backgroundTint="@color/lightBlue"
            />
    </GridLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical">
        <TableLayout
            android:id="@+id/tableAbsensi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:background="@color/gray">

            <TableRow>
                <TextView
                    android:id="@+id/headerNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/squared_box"
                    android:text="@string/no"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/headerNisn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/squared_box"
                    android:text="@string/nama"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/headerKet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/squared_box"
                    android:text="@string/ket"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/headerTanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/squared_box"
                    android:text="@string/tanggal"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/headerJamasuk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/squared_box"
                    android:text="@string/datang"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/headerJampulang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/squared_box"
                    android:text="@string/pulang"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textStyle="bold"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
