<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:padding="16dp"
        android:gravity="center">
        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Search Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/searchEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/cari"
                    android:padding="8dp"/>

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cari"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/lightBlue" />
            </LinearLayout>

            <!-- Table -->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
                <TableLayout
                    android:id="@+id/tableSiswa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*"
                    android:background="@color/gray">

                    <TableRow>
                        <TextView android:text="@string/no"  style="@style/TableHeader" />
                        <TextView android:text="@string/nisn" android:id="@+id/headerNisn" style="@style/TableHeader" />
                        <TextView android:text="@string/nama" android:id="@+id/headerNama" style="@style/TableHeader" />
                        <TextView android:text="Gender" android:id="@+id/headerJenis" style="@style/TableHeader" />
                        <TextView android:text="@string/edit" android:id="@+id/headerEdit" style="@style/TableHeader" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>

            <!-- Pagination -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/prevpage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sebelumnya"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/lightBlue" />

                <TextView
                    android:id="@+id/pageinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/halaman"
                    android:layout_marginHorizontal="16dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/nextpage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/berikutnya"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/lightBlue" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Footer -->
    <LinearLayout
        android:id="@+id/footerGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generate All Qrcode"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/generateAllQr"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_blue_btn"
            android:scaleType="centerInside"
            android:src="@drawable/qr" />
    </LinearLayout>

</LinearLayout>
