<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnTambahSiswa"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="25dp"
            android:drawableBottom="@drawable/floppy"
            android:drawablePadding="25dp"
            android:drawableTint="@color/white"
            android:text="@string/tambah"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="center|bottom"
            android:background="@drawable/rounded_green_btn" />

        <Button
            android:id="@+id/btnDaftarSiswa"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="10dp"

            android:paddingBottom="25dp"
            android:drawableBottom="@drawable/list"
            android:drawablePadding="25dp"
            android:text="@string/daftar"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="center|bottom"

            android:background="@drawable/rounded_blue_btn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnGenerateQr"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="25dp"
            android:drawableBottom="@drawable/qr"
            android:drawablePadding="25dp"
            android:text="@string/qr_siswa"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="center|bottom"

            android:background="@drawable/rounded_green_btn"/>

<!--        <Button-->
<!--            android:layout_width="160dp"-->
<!--            android:layout_height="160dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:background="@drawable/rounded_blue_btn" />-->

    </LinearLayout>
</LinearLayout>