<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue"
            android:layout_marginBottom="24dp"
            android:gravity="center">

            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="@string/tambah_siswa"
                android:gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nomor_induk_siswa"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000" />

        <EditText
            android:id="@+id/nisn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/nama_siswa"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000" />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:paddingHorizontal="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Jenis Kelamin"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000" />

        <Spinner
            android:id="@+id/jns"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitformsiswa"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_green_btn"
                android:text="@string/tambah"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/generateQr"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/rounded_blue_btn"
                android:scaleType="centerInside"
                android:src="@drawable/qr" />
        </LinearLayout>

        <Button
            android:id="@+id/filecsv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_green_btn"
            android:text="Import CSV"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
